# gsbn

./: 404.html  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  index.html  sitemap.xml  workspace.code-workspace
0.0/: CMakeLists.txt  README
0.0/include/gsbn/: Blob.hpp  Common.hpp  Database.hpp  Gen.hpp  MemBlock.hpp  Net.hpp  ProcedureFactory.hpp  Rec.hpp  Table.hpp
0.0/include/gsbn_view/: Main.hpp
0.0/src/gsbn/: Blob.cpp.x  Database.cpp  Gen.cpp  Net.cpp  Solver.cpp
0.0/src/gsbn_bin2txt/: Main.cpp
0.0/src/gsbn_view/: Ui.cpp
0.0/tools/plot/: plot_ej.py  plot_j.py
1.0/: CMakeLists.txt
1.0/include/gsbn/: Common.hpp  Database.hpp  Gen.hpp  Random.hpp  Rec.hpp  Solver.hpp  SyncVector.hpp
1.0/src/gsbn/: Database.cpp  Gen.cpp  Random.cpp  Rec.cpp  Solver.cpp  SyncVector.cpp  Table.cpp  Upd.cpp
1.0/src/gsbn_sim/: Main.cpp
1.0/src/gsbn_view/: Main.cpp
1.0/tools/plot/: plot_wij_hcu.py
1.4/: CMakeLists.txt  Doxyfile.in  README
1.4/data/: std_test_10.prototxt  std_test_100.prototxt  std_test_100_10ms.prototxt
1.4/include/gsbn/: Common.hpp  Solver.hpp  Table.hpp  Upd.hpp
1.4/src/gsbn/: MemBlock.cpp  Rec.cpp  Solver.cpp  SyncVector.cpp  SyncVector.cu
1.4/src/gsbn_sim/: Main.cpp
1.4/src/gsbn_view/: Main.cpp.x
1.4/tools/plot/: plot_spk.py
1.5/: CMakeLists.txt
1.5/data/: std_test_10.prototxt  std_test_100.prototxt  std_test_10_10ms.prototxt
1.5/include/gsbn/: Gen.hpp  MemBlock.hpp
1.5/include/gsbn/procedures/: ProcNet.hpp  ProcNetBatch.hpp
1.5/include/gsbn/procedures/ProcNet/: Hcu.hpp  Msg.hpp  Proj.hpp
1.5/include/gsbn/procedures/ProcNetBatch/: Pop.hpp  Proj.hpp
1.5/include/gsbn/procedures/ProcNetGroup/: Conn.hpp  Hcu.hpp  Pop.hpp
1.5/include/gsbn/proto/: gsbn.pb.h
1.5/include/gsbn_view/: Ui.hpp
1.5/src/gsbn/: Rec.cpp  Solver.cpp  SyncVector.cu  Table.cpp
1.5/src/gsbn/procedures/: ProcNetBatch.cpp  ProcRnd.cpp.x
1.5/src/gsbn/procedures/ProcNetBatch/: Pop.cpp  Pop.cu  Proj.cpp  Proj.cu
1.5/src/gsbn/proto/: gsbn.pb.cc  gsbn.proto
1.5/src/gsbn_bin2txt/: Main.cpp.x
1.5/src/gsbn_sim/: Main.cpp
1.5/tools/plot/: plot_ij.py  plot_ij_hcu.py  plot_stim.py
Experiment/Adaptation/1-Color-switch/: index.html
Experiment/Compete/1-Simple-shape-test/: index.html
Experiment/Compete/2-Complex-shape-test/: index.html
Framework/Common/: index.html
Framework/intro/: index.html
Procedure/example/: index.html
Procedure/intro/: index.html
about/: index.html
data/: 10x10.prototxt  10x10_rnd.prototxt  20_4gpu.prototxt  2gpu.prototxt  2x5x10_rnd.prototxt  ada.BK.prototxt  ada.prototxt  cartoon.prototxt  color.prototxt  init_conn_0.1.map  init_conn_0.5.map  maze.prototxt  maze2.prototxt  mouse_4gpu.prototxt  nocol.prototxt  sin.prototxt  single.prototxt  sp.prototxt  std_test.prototxt  std_test_10.prototxt  std_test_100.prototxt  std_test_10_-1.prototxt  std_test_10_0.2.prototxt  std_test_10_0.5.prototxt  std_test_10_70_-1.prototxt  std_test_10_70_-1_FpP32O16.prototxt  std_test_10_70_-1_FpP32O32.prototxt~  std_test_10_70_-1_FxP16O16.prototxt  std_test_10_70_-1_FxP32O16.prototxt  std_test_10_fp32.prototxt  std_test_20.prototxt  std_test_30.prototxt  std_test_50_0.5.prototxt  std_test_lazy.prototxt  std_test_periodic.prototxt  std_test_periodic.prototxt~  std_test_periodic_100.prototxt  test (copia).prototxt  test.prototxt  test_2.prototxt  (+2 more)
data/nocol/ProcCheck/: check_result.txt
data/nocol/ProcSpkRec/: plot_ssi.py  spk_pop_0.csv  ssi_pop_0.csv  ssj_pop_0.csv  zj2_nocol_pop_0.csv  zj2_pop_0.csv
data/snapshot_10_-1/: check_result.txt  spike.csv
data/snapshot_10_-1_FpP32O16/: check_result.txt
data/snapshot_10_-1_FpP32O32/: check_result.txt
data/snapshot_10_-1_FxP16O16/: check_result.txt
data/snapshot_10_-1_FxP32O16/: check_result.txt
data/snapshot_10_-1_fix/: spike.csv
data/snapshot_10_-1_fp32/: spike.csv
data/snapshot_10_0.2/: check_result.txt
data/snapshot_10x10_rnd/ProcCheck/: check_result.txt
data/snapshot_50_0.5/: check_result
data/snapshot_50_0.5.fp32/: check_result
data/snapshot_50_0.5_fp32/: check_result
data/stdin_10x10/: spike.csv
docs/: mkdocs.yml
docs/docs/: about.md  index.md
docs/site/: 404.html  index.html  sitemap.xml
include/gsbn/: Blob.hpp  Common.hpp  Common.hpp~  ConnManager.hpp  Conv.cuh  Conv.hpp  Database.hpp  Fix16.cuh  Fix16.hpp  Fp16.cuh  Fp16.hpp  Gen.hpp  GlobalVar.hpp  Hcu.hpp  HcuSlot.hpp  IArray.hpp  IJMat.hpp  JArray.hpp  Main.hpp  McuFanout.hpp  MemBlock.hpp  MemBlock.hpp~  Net.hpp  Parser.hpp  Pop.hpp  ProcedureFactory.hpp  Proj.hpp  Random.hpp  Rec.hpp  Recorder.hpp  Solver.hpp  Spike.hpp  SpikeManager.hpp  SyncVector.hpp  SyncVector.hpp~  Table.hpp  Upd.hpp  table.bk.tar.xz
include/gsbn_sim/: Main.hpp
include/gsbn_view/: Common.hpp  Ui.hpp
mkdocs/: search_index.json
proto_python/: gsbn_pb2.py
src/gsbn/: .__afsF946  Blob.cpp  Common.cpp  Common.cu  ConnManager.cpp  Conv.cpp  Database.cpp  Fix16.cpp  Fp16.cpp  Fp16.cu  Gen.cpp  GlobalVar.cpp  Hcu.cpp.x  HcuSlot.cpp  IArray.cpp  IJMat.cpp  JArray.cpp  Main.cpp  McuFanout.cpp  MemBlock.cpp  Net.cpp  Net.cpp.bk  Net.cu  Parser.cpp  Pop.cpp.x  ProcedureFactory.cpp  Proj.cpp  Random.cpp  Rec.cpp  Recorder.cpp  Solver.cpp  Solver.cpp~  Spike.cpp  SpikeManager.cpp  SyncVector.cpp  SyncVector.cpp~  SyncVector.cu  SyncVector.cu~  Table.cpp  Table.cpp~  (+2 more)
src/gsbn_bin2txt/: Main.cpp
src/gsbn_sim/: Main.cpp
src/gsbn_view/: Ui.cpp
test/power/: main.cpp  main.cpp~
tools/animation/: ani_act.py  ani_pic.py  ani_shape.py  ani_spike.py  animation.tar.xz
tools/init_conn/: conn_map_file.txt  init_conn_0.9.map  init_conn_100x100.py
tools/plot/: plot_capacity.py  plot_i.py  plot_ij.py  plot_ij_fp32.py  plot_ij_hcu.py  plot_j.py  plot_power.py  plot_spk.py  plot_stim.py  plot_trace_t.py  plot_trace_t_fp32.py
tools/stimgen/: a.py  b.py  colors.map  find_color.py  gen_1000x100.py  gen_100x100.py  gen_100x100_1000_rnd.py  gen_10x10.py  gen_10x10_rnd.py  gen_color.py  gen_compete.py  gen_music.py  gen_pic.py  gen_picture.py  gen_recall.py  gen_rnd.py  gen_simple_shape.py  gen_sin.py  log  stimuli.txt
(+325 files in other folders)
